# project-chronos

./: .confluence-mapping.json  .coveragerc  .dev.vars  .env.example  .gitignore  .mcp.json  .npmrc  .pre-commit-config.yaml  .vercelignore  CHRONOS-391.json  CHRONOS-392.json  CHRONOS-393.json  CLOUDFLARE-DEPLOY.md  CLOUDFLARE-GIT-SETUP.md  CLOUDFLARE_SETUP.md  DEPLOYMENT-SESSION-SUMMARY.md  DEVOPS_CLEANUP_PLAN.md  DIRECTUS-PERMISSIONS.md  Dockerfile  Dockerfile.postgres  Dockerfile.timescaledb  GEOSPATIAL_OPTIMIZATION_SUMMARY.md  KEEPASSXC_SETUP_CHECKLIST.md  Makefile  PAYLOAD_CMS_FIX_QUICK_START.md  POETRY_GUIDE.md  QUICK-DEPLOY.md  README.md  RUN_GEO_INGESTION.sh  RUN_INGESTION.sh  SPRINT4_SUMMARY.md  TimescaleDB Business Logic 2a2bd6ca94f3801b86c1ceba13d52fc4.md  alembic.ini  debug_fred.py  debug_statscan.py  discover_statscan_catalog.py  docker-compose.override.yml  docker-compose.yml  fix_hpi_catalog.py  fix_serviceworker_errors.sh  (+19 more)
.backups/documentation-refactor-2025-12-12/: README.md  docs-inventory-before.txt  secrets-template-backup.md
.claude/: settings.local.json
.devcontainer/: ANTIGRAVITY_SETUP.md  CHEATSHEET.md  DOCKER_REFERENCE.md  Dockerfile  QUICK_START.md  README.md  devcontainer.json  docker-helpers.sh  rebuild.sh
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  deploy-clawdacious.yml  deploy-web.yml  docs-lint.yml  docs-sync.yml  gemini-dispatch.yml  gemini-review.yml
alembic/: env.py
alembic/versions/: 0bbd9a03d5bc_add_waitlist_spam_protection_and_crm_.py  249e770f3757_add_updated_at_to_series_metadata.py  4108aca2dd8b_add_hybrid_ingestion_schema.py  7f20cd5ba6ca_add_methodology_metadata_to_series.py  ad3f8c9b2e14_add_primary_key_to_economic_observations.py  add_markdown_content_to_ingested_documents.py  b388a0d4a063_refactor_varchar_to_text.py  be7e246fee39_add_captcha_verifications_table.py  c4f9e2b8a1d5_create_mv_choropleth_boundaries.py  c544_add_extractions_table.py  c545_create_ccaa_knowledge_graph.py  e5800adf350c_cleanup_economic_data_and_frequencies.py  ea7e6a9e8df2_baseline_existing_schema_from_schema_sql.py  eef0756a7daa_add_data_catalogs_table.py  (+2 more)
apps/chronos-api/: Dockerfile.production  README.md  main.py  project.json  pyproject.toml
apps/chronos-api/src/chronos/api/: dependencies.py
apps/chronos-api/src/chronos/api/routers/: economic.py  geo.py
apps/chronos-api/src/chronos/cli/: google_cli.py
apps/chronos-api/src/chronos/config/: settings.py
apps/chronos-api/src/chronos/database/: models.py
apps/chronos-api/src/chronos/database/migrations/: 003_add_unit_metadata.py
apps/chronos-api/src/chronos/ingestion/: enhance_catalog.py  fix_catalog_quality.py  fred.py  ingest_catalog.py  statscan.py  timeseries_cli.py  valet.py
apps/chronos-api/src/chronos/integrations/google/: __init__.py  admin.py  gmail.py
apps/chronos-api/src/chronos/utils/: logging.py
apps/chronos-api/src/chronos/workflows/jira/: LAST_TICKET.txt
apps/ingestion-worker/: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  DOCLING_IMPROVEMENTS.md  Dockerfile  GUI_INSPECTION_GUIDE.md  INTEGRATION_COMPLETE_NEXT_STEPS.md  README.md  SESSION_SUMMARY.md  automated_quality_check.py  debug_db_check.py  export_for_review.py  main.py  models.py  pyproject.toml  test_docling_improvements.py  test_e2e_simple.py  test_pipeline_performance.py  test_rag_quality.py  verify_pipeline.py
apps/ingestion-worker/modal_functions/: __init__.py  docling_processor.py
apps/ingestion-worker/quality_review/: chunks_summary.txt  quality_report.txt  test-service-list.json  test-service-list.md
apps/ingestion-worker/scripts/: add_markdown_column.py  check_schema.py  quality_assessment.py
apps/ingestion-worker/services/: contact_extractor.py  database.py  directus_client.py  graph_populator.py  ingestion_service.py  ingestion_service_modal.py
apps/ingestion-worker/utils/: __init__.py  csv_generator.py  json_to_markdown.py  markdown_postprocessor.py
config/: alembic.ini
database/: analytics_views.sql  economic_observations_view.sql  schema.sql  verify_extensions.sql  views.sql
docs/: .confluence-mapping.json  2025-11-08_cleanup_TODO.txt  ACTION_PLAN.md  BACKUP_RESTORE.md  CI_QUALITY_FIX.md  CLEANUP_COMPLETE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_MIGRATION_PLAN.md  CONTRIBUTING.md  DATA_QUALITY_CHECKLIST.md  DATA_REINGESTION_GUIDE.md  DESIGN_SYSTEM_FEB_2026.md  DEVOPS_HARDENING.md  DIRECTUS_DASHBOARDS_SETUP.md  DIRECTUS_STATUS.md  DIRECTUS_WYSIWYG_SETUP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REFACTOR_DECISION.md  EXECUTION_GUIDE.md  FEATURES_PAGE.txt  FX_RATES_METHODOLOGY.md  HANDOFF_NEXT_AI.md  I am setting up a sophisticated.txt  JIRA_TICKETS_CREATED.md  LLM_ONBOARDING_GUIDE.md  MCP_CREDENTIALS_SETUP.md  MCP_SETUP.md  NX_CLOUD_SETUP.md  OPERATIONS_QUICK_REFERENCE.md  PAYLOAD_CMS_REMOVAL.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SCHEMA_REFERENCE.md  SECRETS_MANAGEMENT.md  SECRETS_REFERENCE.md  SENTRY_COMPLETE_SETUP.md  STRATEGIC_WORK_PLAN.md  UPDATEME_README.md  (+4 more)
man/: install-man.sh
mcp-send-email/: .env.example  package-lock.json  package.json
scripts/: README.md  add-permissions-sql.ts  apply_data_fixes.py  audit_data_issues.py  backup_database.sh  backup_host.sh  bulk_ingest_fred.sh  bulk_ingest_valet.sh  check-all-tables.mjs  check-db-state.mjs  check-deployment-readiness.sh  check-docker.sh  check-field-config.cjs  check-flow-operations.cjs  check-flows.cjs  check-geo-data.mjs  check-user-sessions.mjs  cleanup-data-sources.ts  close-dependabot-prs.sh  cloudflare-mcp-wrapper.sh  configure-directus-collections.ts  convert-markdown-to-html.cjs  convert-markdown-to-html.js  create-admin-direct.mjs  create-admin-sql.sh  create-first-user-production.mjs  daily_data_update.sh  daily_update.sh  delete-malformed-user.mjs  deploy_lightsail.sh  dev.sh  export_boundaries_for_tiles.py  fix-data-collections.ts  fix-directus-pks.ts  fix-literal-newlines.cjs  fix-wysiwyg-editor.cjs  generate_regional_catalog.py  ingest-canadian-data.sh  ingest_tier1.sh  install_extensions.sh  (+37 more)
static/: environment.js
tests/: conftest.py
(+789 files in other folders)
