[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-chronos"
version = "0.2.0" # Incremented version to reflect our recent work
description = "Production-grade macroeconomic data platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "structlog>=23.3.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "pre-commit>=3.0.0",
    "ipython", # Good to have for debugging
    "ipdb",    # Good to have for debugging
]

# THIS IS THE NEW SECTION THAT REPLACES THE LOGIC FROM setup.py
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
