[tool.poetry]
name = "ingestion-worker"
version = "0.1.0"
description = "Financial document ingestion worker using Docling and LlamaIndex"
authors = ["Prometheus <prometheus@automatonicai.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
docling = "^1.0.0"  # Assuming 1.x version for 2026 context
llama-index = "^0.10.0"
llama-index-vector-stores-postgres = "^0.1.0"
psycopg2-binary = "^2.9.9"

python-multipart = "^0.0.9" # For file uploads
httpx = "^0.27.0"
sqlalchemy = "^2.0.0"
openai = "^1.0.0" # For embeddings if needed by LlamaIndex defaults

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
